SFDEV/force-app/main/default/objects/Reembus_Ssytem__c/Reembus_Ssytem__c.object-meta.xml
<CustomObject>
    <label>Reembus Sytem</label>
    <nameField>
        <label>Reembus Ssytem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reembus Sytems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>