SFDEV/force-app/main/default/objects/Reembus_Ssytem__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reembus Sytems</relationshipLabel>
    <relationshipName>Reembus_Sytems</relationshipName>
    <type>Lookup</type>
</CustomField>