SFDEV/force-app/main/default/objects/Reembus_Ssytem__c/fields/Addres__c.field-meta.xml
<CustomField>
    <fullName>Addres__c</fullName>
    <label>Addres</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>