SFDEV/force-app/main/default/objects/Reembus_Ssytem__c/fields/Countr__c.field-meta.xml
<CustomField>
    <fullName>Countr__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>