SFDEV/force-app/main/default/objects/Reembus_Ssytem__c/fields/Date_of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Stay__c</fullName>
    <label>Date of Stay</label>
    <type>Date</type>
</CustomField>