SFDEV/force-app/main/default/objects/Reembus_Ssytem__c/fields/Dist_Travel__c.field-meta.xml
<CustomField>
    <fullName>Dist_Travel__c</fullName>
    <label>Dist Travel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>