SFDEV/force-app/main/default/objects/Reembus_Ssytem__c/fields/Operator_Name__c.field-meta.xml
<CustomField>
    <fullName>Operator_Name__c</fullName>
    <label>Operator Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vodafone</fullName>
            </value>
            <value>
                <fullName>Jio</fullName>
            </value>
            <value>
                <fullName>Idea</fullName>
            </value>
            <value>
                <fullName>Airtel</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Verizon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>