SFDEV/force-app/main/default/objects/Reembus_Ssytem__c/fields/Phone_Amt__c.field-meta.xml
<CustomField>
    <fullName>Phone_Amt__c</fullName>
    <label>Phone Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>